# cy1400-eqt

./: .gitignore  LICENSE  README.md  _autohistplot.sh  autopick.sh  autopick_nopng.sh  batch_sac.py  cat_header_writer.sh  chEVT.pll  check_completion.py  check_deep_misfits.py  compare_detections.py  compare_manual.py  config.txt  copy_subset.py  cross_correlate.py  cut_sac.sh  cut_sac_from_timestamp.py  detprob_and_lcurve_hist.py  dump_manual_picks.py  emptymodel  filter_csv.py  find_overlap.py  fix_missing.py  gen_manual_pick.sh  generate_noise.py  generate_travel_table.py  gmt.history  header_writer.py  helpme.py  hour_hist.gn  joblist.txt  kml_make.py  livemodel  mag_est_from_source.py  make_nlloc.py  make_training_file.py  make_velest.py  manualreview.sh  merge_csv.py  (+67 more)
EQTransformer/EQTransformer/core/: EqT_utils.py
PhasePApy-master/examples/: example_1dassociator_OK.py  example_ktpicker.py
PhasePApy-master/phasepapy/associator/: plot1D.py  plot3D.py
PhasePApy-master/phasepapy/phasepicker/: aicdpicker.py  fbpicker.py  ktpicker.py
archive_scripts/: analyse_cross_corr.py  associator_test.py  check_h5.py  histogram_stuff.py  plot_from_eqt.py  split_by_snr.py  test_spectrogram.py  use_default_train.py
arrivaltime_remapping/: .~lock.main.csv#
csi/: usgs_csi.py
dd_sim/: gen_DD.py  process_bootstrap.py
gearth_kml/: new_station_info.kml  old_stations.kml  sumatran_fault.kml
gmt/: distaz.c  geojson2xy.py  rel_dist.py  rotate_beachball.py  xy_binning.py
gmt/aceh/: aceh_inset.sh  eqt_count.sh  gmt.history  insettest.sh  plot_stations.sh  plot_ta.sh
gmt/gridsearch/: gmt.history  test.grd  test.sh  test.xyz
gmt/json/: 85.110.-15.15.mag6.1976-2020.xy  85.120.-15.15.mag6.1976-2020.xy
gmt/main/: 1976_2020_sumatra_M6.xy  all_sum.xy  earthquake_map.sh  gmt  gmt.conf  gmt.history  profile.sh  profile_dots_only.sh  psconvert_4457d.eps  sumatra_1.xy  sumatra_slab.sh  sumatra_test.xy  sumatra_test_rotated.xy  test_coordinates.xy
gmt/main/sumatra_1.binned/: bin0.xy  bin0.zxy  bin1.xy  bin1.zxy  bin2.xy  bin2.zxy  bin3.xy  bin3.zxy  bin4.xy  bin4.zxy  profile0.axy  profile0.bxy  profile0.pretopxy  profile0.temp  profile0.topxy  profile0.xy  profile1.axy  profile1.bxy  profile1.pretopxy  profile1.temp  profile1.topxy  profile1.xy  profile2.axy  profile2.bxy  profile2.pretopxy  profile2.temp  profile2.topxy  profile2.xy  profile3.axy  profile3.bxy  profile3.pretopxy  profile3.temp  profile3.topxy  profile3.xy  profile4.axy  profile4.bxy  profile4.pretopxy  profile4.temp  profile4.topxy  profile4.xy
gmt/main/sumatra_1.binned/rotated/: bin0.xy  bin0.zxy  bin1.xy  bin1.zxy  bin2.xy  bin2.zxy  bin3.xy  bin3.zxy  bin4.xy  bin4.zxy
gmt/main/sumatra_all/: bin0.xy  bin0.zxy  bin1.xy  bin1.zxy  bin2.xy  bin2.zxy  bin3.xy  bin3.zxy  bin4.xy  bin4.zxy  profile0.axy  profile0.bxy  profile0.pretopxy  profile0.temp  profile0.topxy  profile0.xy  profile1.axy  profile1.bxy  profile1.pretopxy  profile1.temp  profile1.topxy  profile1.xy  profile2.axy  profile2.bxy  profile2.pretopxy  profile2.temp  profile2.topxy  profile2.xy  profile3.axy  profile3.bxy  profile3.pretopxy  profile3.temp  profile3.topxy  profile3.xy  profile4.axy  profile4.bxy  profile4.pretopxy  profile4.temp  profile4.topxy  profile4.xy
gmt/tutorials/: MASTER.sh  age_1.sh  disp.grd  earthquake.sh  eqs.xy  eqs1.xy  fiji_mec.sh  gmt.conf  gmt.history  gps_0.sh  japan.xy  japan2011.sh  map.sh  ocean_age.nc  plot_gcmt.sh  sam_slab.grd  slab_1.sh  stars.xy  test.sh  topo2.sh
gmt/util/: aceh_5jul_afterDD_dp  aceh_5jul_beforeDD_dp  aceh_7jul_afterDD_2_dp  aceh_7jul_afterDD_dp  aceh_7jul_beforeDD_dp  afterDD.sh  afterREAL.sh  depth_profile.sh  gmt.history  plsplot.sh  zoom_intersection.sh
gridsearch/: .npy  55_test_grid.npy  collate_gs.py  distbaz  gmt.conf  itvel.npy  model_dlange.npy  model_dlange2.npy  model_dlange2_451km-60km.npy  model_dlange2_451km.npy  plot_velocity_model.gn  postprocessing.ipynb  test.nc  test.sh  test_mask.npy  test_mask_gekko.npy  test_stdmask.npy  trav.pl  travel_time.py  tt_t.npy
gridsearch/local_5jul_afterREAL/000014/: 000014_DX0.00779_DZ1_zoomout.npy
gridsearch/local_5jul_afterREAL/000086/: 000086_DX0.0207_DZ1.npy
gridsearch/local_5jul_afterREAL/000212/: 000212_DX0.00273_DZ1.npy  000212_DX0.0114_DZ1_zoomout.npy
gridsearch/local_5jul_afterREAL/000288/: 000288_DX0.0203_DZ1.npy
gridsearch/local_5jul_afterREAL/001201/: 001201_DX0.00508_DZ1.npy
gridsearch/local_5jul_afterREAL/001266/: 001266_DX0.0109_DZ1_zoomout.npy
gridsearch/share/: plot_gridsearch.py  search_grid.py  tt_t.npy
gridsearch/share/000055/: gmt.history
mag/: calc_local_mag_zy.py
notes/: station remapping.md
plot_data/: .~lock.23may_montecarloABZ_21mardefaultmerge.csv#
plotter/: maxagreement_per_sample.gn  plot_LR_precision.gn  plot_agreementhist.gn  plot_detprob_hist.gn  plot_indiv_pick_uncertainty.gn  plot_lcurve_hist.gn  plot_misfit.gn  plot_montecarlo.gn  plot_multi_n_hist.gn  plot_pick_stds.gn  plot_rotate_coeff.gn  plot_snr_lcurve.gn  plot_spec.gn  snr_lcurves.gn  snrhist.gn  wadati.gn
real_postprocessing/: collect_latlon.py  compile_event_table.py  find_waveform.py  generate_pssac.py
release-v0.1/: recompute_snr.py
station_uptime/: plot_uptime.py
