set term pdf font "Helvetica, 12" size 10cm,8cm dashed
set output "dlange_velocitymodel.pdf"
set termopt enhanced
set output "dlange_velocitymodel.pdf"
plotfile="txt_model_dlange.txt"

set yr [50:0] reverse

set key outside center bottom box 1

set xl "Velocity [km s^{-1}]"
set yl "Depth [km]"
set label 1 "v_p/v_s = 1.76" at 9,2 right font ",8"
set label 2 "D. Lange, 2018, Solid Earth" at 9,6 right font ",8"
set label 3 "9, 1035-1049, 2018" at 9,10 right font ",8"

plot plotfile u 2:1 w l lw 1 lc rgb "blue" title "v_s", \
	plotfile u 3:1 w l lw 1 lc rgb "red" title "v_p",\
	"txt_model_ak135.txt" u 3:1 w l lc rgb "blue" lw 1 dt 2 title "ak135 v_s",\
	"txt_model_ak135.txt" u 2:1 w l lc rgb "red" lw 1 dt 2 title "ak135 v_p"