set term pdf font "Helvetica, 12" size 8.6cm,6cm

set key autotitle columnhead

set datafile separator ","

plot_data = ARG1
output_file = ARG2

set output output_file
set key below


set style fill transparent solid 0.4 

set boxwidth 0.1
set style histogram rowstacked
set style data histograms

set xr [0:1]
set yr [0:1]
set xl "Detection probability"
set yl "Proportion"
set xtics 0,0.1,1

plot plot_data u 1:(($2)/($2 + $3 + $4)) w boxes lc rgb "red" title "A" , '' u 1:(($3)/($2 + $3 + $4)) w boxes lc rgb "blue" title "B", '' u 1:(($4)/($2 + $3 + $4)) w boxes lc rgb "black" title "Z"




