set key autotitle columnhead

set datafile separator ","


set term pdf font "Helvetica, 12" size 8.6cm,6cm


plot_file=ARG1
output_file=ARG2

set output output_file

set key below

set xl "Difference from mean (s)"
set yl "No. of events (normalised, unmerged)"

set xr [-0.1:0.1]

set style fill transparent solid 0.4 noborder

plot plot_file u 25:26 smooth freq with boxes lc rgb "red" title "A", plot_file u 25:27 smooth freq with boxes lc rgb "blue" title "B", plot_file u 25:28 smooth freq with boxes lc rgb "black" title "Z"
