set term pdf font "Helvetica, 12" size 8.6cm,6cm

set key autotitle columnhead

set datafile separator ","

plot_file = ARG1
output_file = ARG2

set output output_file
set key above box 1


set xr [0:1]

set xl "Detection threshold"
set y2l "Precision"
set yl "No. of good picks"

set y2tics 0,0.2,1
set y2range [0:1]
set xtics 0,0.1,1

set ytics nomirror
set xtics nomirror


plot plot_file u 1:2 w p pt 7 ps 0.4 lc rgb "black" title "Precision" axis x1y2, '' u 1:3 w p pt 7 ps 0.4 lc rgb "blue" title "No. of good picks" axis x1y1



