set key autotitle columnhead

set datafile separator ","


set term pdf font "Helvetica, 12" size 10cm,6cm

set output "plots/10apr_montecarlo_defaultmulti_precision.pdf"

plot_file="plot_data/8apr_montecarloABZ_21mardefaultmerge.csv"

f(x) = A * exp(k * x) + y
g(x) = B * exp(j * x) + z

A = -800
y = 2000
k = -1

B = -400
j = -0.5
z = 2000

set fit errorscaling

fit f(x) plot_file u 1:2:7 yerror via A, y, k
fit g(x) plot_file u 1:($3 + $4):(sqrt($8**2 + $9**2)) yerror via B, j, z

#set xl "Initial learning rate exponent"
#set yl "No. of good picks"
#set y2l "Proportion of good picks"
#set y2tics 0,0.2,1
#set y2range [0:1]
#set ytics nomirror
#set xtics nomirror
#set grid
set key above box 1

set ytics nomirror
set xl "No. of runs"
set yl "Good detections"

set y2l "No. of good detections"
set y2tics 50

plot plot_file u 1:($3 + $4)/($2) ps 0.2 pt 7 lc rgb "black" title "Precision" axis x1y1, '' u 1:($3 + $4) ps 0.2 pt 7 lc rgb "red" title "No. of good events" axis x1y2

#plot plot_file u 1:2:7 w yerror lc rgb "black" ps 0.1 pt 7 notitle, plot_file u 1:($3 + $4):(sqrt($8**2 + $9**2)) lc rgb "red" ps 0.1 pt 7 notitle, f(x) title "All detections" lc rgb "black", g(x) title "Good detections" lc rgb "red"
