set term pdf font "Helvetica, 12" size 8.6cm,6cm
set key autotitle columnhead

set datafile separator ","


set output "plots/10apr_50run_n_variance.pdf"

plot_file="plot_data/10apr_multirun_variance.txt"

set xl "No. of detections"
set yl "Frequency"

set style fill transparent solid 0.4

plot plot_file u 1:2 smooth freq w boxes lc rgb "black" notitle
