set key autotitle columnhead

set datafile separator ","


set term pdf font "Helvetica, 12" size 8.6cm,6cm


plot_file=ARG1
output_file=ARG2



set key below


#set xr [0:0.1]
set yl "No. of graded events"

set style fill transparent solid 0.4 noborder

set output output_file."_p_arrival_std.pdf"
set xl "P arrival time standard deviation (s)"
set xr [0:0.1]
plot plot_file u 2:1 smooth freq with boxes lc rgb "red" title "A", plot_file u 12:11 smooth freq with boxes lc rgb "blue" title "B", plot_file u 22:21 smooth freq with boxes lc rgb "black" title "Z"

set output output_file."_s_arrival_std.pdf"
set xl "S arrival time standard deviation (s)"
set xr [0:0.1]
plot plot_file u 4:3 smooth freq with boxes lc rgb "red" title "A", plot_file u 14:13 smooth freq with boxes lc rgb "blue" title "B", plot_file u 24:23 smooth freq with boxes lc rgb "black" title "Z"


set xr [0:0.5]

set output output_file."_prob_d_std.pdf"
set xl "Detection probability standard deviation"
plot plot_file u 6:5 smooth freq with boxes lc rgb "red" title "A", plot_file u 16:15 smooth freq with boxes lc rgb "blue" title "B", plot_file u 26:25 smooth freq with boxes lc rgb "black" title "Z"


set output output_file."_prob_p_std.pdf"
set xl "P wave probability standard deviation"
plot plot_file u 8:7 smooth freq with boxes lc rgb "red" title "A", plot_file u 18:17 smooth freq with boxes lc rgb "blue" title "B", plot_file u 28:27 smooth freq with boxes lc rgb "black" title "Z"


set output output_file."_prob_s_std.pdf"
set xl "S wave probability standard deviation"
plot plot_file u 10:9 smooth freq with boxes lc rgb "red" title "A", plot_file u 20:19 smooth freq with boxes lc rgb "blue" title "B", plot_file u 30:29 smooth freq with boxes lc rgb "black" title "Z"
