set term pdf font "Helvetica, 12" size 8.6cm,6cm color

plotfile = "plot_data/rotate_vary_max_freq.txt"
outputfile = "plots/rotation_coeff_000212_TG11.pdf"

set output outputfile

#set output output_file
set key above box 1

set xr [1:80]

set xl "Upper corner frequency"
set y2l "Normalised A, y_0"
set yl "Phase shift "

#set title "y(x) = |A|cos(2x + \phi) + y_{0}"

set y2tics 0,0.1,1
set y2range [0:1]
#set xtics 0,0.1,1

set ytics nomirror
set xtics nomirror


# A, phi, y0

plot plotfile u 1:3 w p pt 6 ps 0.2 lc rgb "black" title "phase angle" axis x1y1, '' u 1:2 w p pt 7 ps 0.2 lc rgb "blue" title "A_{norm}" axis x1y2, '' u 1:4 w p pt 7 ps 0.2 lc rgb "red" title "y_{0,norm}" axis x1y2
#plot plot_file u 1:2 w p pt 7 ps 0.4 lc rgb "black" title "Precision" axis x1y2, '' u 1:3 w p pt 7 ps 0.4 lc rgb "blue" title "No. of good picks" axis x1y1
