# meant this to plot fft haha

set datafile separator ","

set logscale x

set term pdf font "Helvetica, 12" size 8.6cm,6cm
set key autotitle columnhead
#set format y "10^{%L}"
set output "plots/9apr_stackedfft_defaultABmulti.pdf"

plot_file="plot_data/8apr_default1month_stacked_fft.csv"


set xr [1:45]
#set yr [1e-3:1e1]


set xl "Frequency"
set yl "Amplitude"

plot plot_file u 1:2 w l lw 1 lc rgb "red", plot_file u 1:3 w l lw 1 lc rgb "blue", plot_file u 1:4 w l lw 1 lc rgb "black"
show key
