set term pdf font "Helvetica, 12" size 10cm,6cm
set datafile separator ","
set term pdf font "Helvetica, 12" size 10cm,6cm
set datafile separator ","

set output "../plots/jan2sep_REAL_wadati.pdf"
plot_file="../real_postprocessing/real_jan2sep/jan2sep_REAL_wadati.csv"


f(x) = A * x + B

A = 0.8
B = 0.1

fit f(x) plot_file u 3:2 via A,B

#set key above box 1

set ytics nomirror
set xl "P arrival time [s]"
set yl "SP differential time [s]"
#set title "5 Jul Aceh Catalogue Wadati Diagram (after hypoDD)"

set yr [0:]

set label 1 sprintf("A = %.2f",A) at -3,20
set label 2 sprintf("B = %.2f",B) at -3,17


plot plot_file u 3:2 ps 0.2 pt 7 lc rgb "red" notitle, f(x) w l lc rgb "black" notitle


